EVA-111 Feat: Se le agrega el color a cada uno de los niveles de las tablas del consolidado

--- a/Financiero/templates/Financiero/FlujoCaja/FlujoCajaConsolidado/index.html
+++ b/Financiero/templates/Financiero/FlujoCaja/FlujoCajaConsolidado/index.html
@@ -135,7 +135,7 @@
                                     </div>
                                     <div id="consolidado" class="table-responsive">
                                         <table class="table table-bordered w-100" id="dataTableCategoria">
-                                            <thead>
+                                            <thead class="bg-primary-400">
                                                 <tr>
                                                     <th></th>
                                                     <th>Categorias</th>
@@ -165,7 +165,7 @@
                                                     <tr id="mas_categoria_{{ mov.id }}" style="display: none">
                                                         <td colspan="4">
                                                              <table class="table table-bordered w-100" id="dataTableSubtipo">
-                                                                <thead>
+                                                                <thead class="bg-info-400">
                                                                     <tr>
                                                                         <th></th>
                                                                         <th>Subtipos</th>
@@ -194,7 +194,7 @@
                                                                         <tr id="mas_subtipo_{{ sub.id }}" style="display: none">
                                                                             <td colspan="4">
                                                                                  <table class="table table-bordered w-100" id="dataTableProCon">
-                                                                                    <thead>
+                                                                                    <thead class="bg-success-100">
                                                                                         <tr>
                                                                                             <th>Procesos / Contratos</th>
                                                                                             {% if comparativo %}
