--- a/Financiero/templates/Financiero/FlujoCaja/FlujoCajaConsolidado/index.html
+++ b/Financiero/templates/Financiero/FlujoCaja/FlujoCajaConsolidado/index.html
@@ -227,6 +227,24 @@
                                                         </td>
                                                     </tr>
                                                 {% endfor %}
+                                                <tr>
+                                                    <td></td>
+                                                    <td>Total</td>
+                                                    {% if comparativo %}
+                                                        <td class="t-a-e">{{ totales.total_ingresos_real|intcomma }}</td>
+                                                        <td class="t-a-e">{{ totales.total_egresos_real|intcomma }}</td>
+                                                        <td class="t-a-e">{{ totales.total_ingresos_proyectado|intcomma }}</td>
+                                                        <td class="t-a-e">{{ totales.total_egresos_proyectado|intcomma }}</td>
+                                                    {% else %}
+                                                        {% if valor.tipos_flujos_caja == 0 %}
+                                                            <td class="t-a-e">{{ totales.total_ingresos_real|intcomma }}</td>
+                                                            <td class="t-a-e">{{ totales.total_egresos_real|intcomma }}</td>
+                                                        {% else %}
+                                                            <td class="t-a-e">{{ totales.total_ingresos_proyectado|intcomma }}</td>
+                                                            <td class="t-a-e">{{ totales.total_egresos_proyectado|intcomma }}</td>
+                                                        {% endif %}
+                                                    {% endif %}
+                                                </tr>
                                             </tbody>
                                         </table>
                                     </div>
