--- a/TalentoHumano/templates/TalentoHumano/Colaboradores/crear-editar.html
+++ b/TalentoHumano/templates/TalentoHumano/Colaboradores/crear-editar.html
@@ -219,10 +219,12 @@
                                                                     <div class="col-md-6">
                                                                         {% select_tag rango 'rango_id' 'Seleccione un rango' texto_label="Rango" value=colaborador.rango_id required="" mensaje_validacion='Por favor seleccione un rango' invalido=errores.rango %}
                                                                     </div>
+                                                                    {% if opcion == 'crear' %}
                                                                     <input id="multiple_grupos"  hidden value="{{ grupos_colaborador }}">
                                                                     <div class="col-md-6">
                                                                         {% select_multiple_tag grupos 'grupo_id[]' 'grupo_id' 'Seleccione un grupo' placeholder="Seleccione un grupo de permisos" texto_label="Grupo de Permisos" value="" required="" mensaje_validacion='Por favor seleccione un grupo de permisos' multiple='multiple' invalido=errores.grupo %}
                                                                     </div>
+                                                                    {% endif %}
                                                                 </div>
                                                             </div>
                                                         </div>
